correction taille police + scrollbar

--- a/screenGuestOrientation.css
+++ b/screenGuestOrientation.css
@@ -25,6 +25,7 @@ html, body
 	position:relative;
 	left:15%;
 	display:table;
+	font-size:160%
 }
 
 .leftBorder
@@ -42,7 +43,12 @@ html, body
 {
 	background-color: #FFFFFF;
 	text-align:center;
-	margin-bottom:20%;
+	margin-bottom:1em;
+}
+
+#logo {
+	width:80%;
+	margin-top:1em;
 }
  
  #title
@@ -50,6 +56,7 @@ html, body
 	padding-left:4%;
 	color: #ffffff;
 	text-align:left;
+	font-size:220%
  }
 
 #hourPanel
@@ -58,6 +65,7 @@ html, body
 	width:100%;
 	padding-top:5%;
 	padding-bottom:5%;
+	font-size:220%;
  }
 
 .ligne0, .ligne1, .ligne2 
